Validação em cascata e Validation Groups

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 NotBlank=não deve estar em branco (customizado)
+NotNull=não deve estar em branco (customizado)
 Size.cliente.email=tamanho deve ser entre {2} e {1} (customizado)
 Email=deve ser um endereço de e-mail bem formado(customizado)
